<resources>
    <string name="app_name">Bizkit</string>
    <string name="hello">Hello</string>
    <string name="username">chef, John</string>
    <string name="indonesian">Indonesian</string>
    <string name="western">Western</string>
    <string name="korean">Korean</string>
    <string name="foodind1">Batagor</string>
    <string name="foodind2">Rendang</string>
    <string name="video">Video Tutorial</string>
    <string name="bahan">Bahan-Bahan:</string>
    <string name="langkah">Langkah-Langkah:</string>
    <string name="isibahan1">
        1. Tahu \n
        2. Ikan Tenggiri\n
        3. Tepung Terigu\n
        4. Bawang Putih\n
        5. Merica Bubuk\n
        6. Garam\n
        7. Minyak Goreng\
        8. Tepung
    </string>
    <string name="isilangkah1">
1. Campurkan Bahan: Dalam mangkuk, campurkan ikan tenggiri yang telah digiling, bawang putih, merica, garam, dan tepung terigu. Aduk hingga merata.\n\n
2. Siapkan Tahu: Ambil potongan tahu, dan isi dengan campuran ikan.\n\n
3. Panaskan minyak dalam wajan. Goreng tahu yang sudah diisi hingga kecokelatan.\n\n
4. Angkat dan tiriskan. Sajikan batagor dengan sambal kacang.Campurkan Bahan: Dalam mangkuk, campurkan ikan tenggiri yang telah digiling, bawang putih, merica, garam, dan tepung terigu. Aduk hingga merata.\n\n
5. Siapkan Tahu: Ambil potongan tahu, dan isi dengan campuran ikan.\n\n
6. Panaskan minyak dalam wajan. Goreng tahu yang sudah diisi hingga kecokelatan.\n\n
7. Angkat dan tiriskan. Sajikan batagor dengan sambal kacang.\n\n
    </string>

</resources>