<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Activity2"
    android:paddingBottom="40dp"
    >

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/foodind1"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        />

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/judul"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:src="@drawable/back_to_activity1"

        />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/judul"
        android:layout_marginTop="40dp"
        android:src="@mipmap/batagor"
        android:contentDescription="@string/foodind1"
        />
    <FrameLayout
        android:id="@+id/flbahan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv"
        app:layout_constraintStart_toStartOf="@id/iv"
        android:layout_marginTop="50dp"
        android:layout_marginStart="-30dp">

        <TextView
            android:id="@+id/bahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bahan"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/isibahan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="?attr/actionBarSize"
            android:text="@string/isibahan1"
            android:fontFamily="serif"
            android:textSize="20sp" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/fllangkah"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/flbahan"
        app:layout_constraintStart_toStartOf="@id/flbahan"
        android:layout_marginTop="50dp">
        <TextView
            android:id="@+id/langkah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/langkah"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/isilangkah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginTop="?attr/actionBarSize"
            android:text="@string/isilangkah1"
            android:fontFamily="serif"
            android:textSize="20sp" />
    </FrameLayout>


        <Button
            android:id="@+id/btnyoutube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="serif"
            android:text="@string/video"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fllangkah"
            tools:ignore="TextContrastCheck,VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>